fix: Configure JVM arguments for test cases to address compatibility  (#92)
* fix: Configure JVM arguments for test cases to address compatibility issues with JDK 17

* added returnDefaultValues flag for mockito