@@ -42,6 +42,10 @@ android {
 
     testOptions {
         unitTests.returnDefaultValues = true
+        unitTests.all {
+            jvmArgs += ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
+            jvmArgs += ['--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED']
+        }
     }
 }
 
